--- a/diymole/szmole/index.html
+++ b/diymole/szmole/index.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
     <title>Whack A Mole</title>
 </head>
 <body>
+<div id = "app">
     <h1 class="SCORE">SCORE: <span>00</span></h1>
     <div class="board">
-        <div class="hole"></div>
-        <div class="hole"></div>
-        <div class="hole"></div>
-        <div class="hole"></div>
-        <div class="hole"></div>
-        <div class="hole"></div>
-        <div class="hole"></div>
-        <div class="hole"></div>
-        <div class="hole"></div>
+        <div class="hole"
+        v-for="hole in (holes)"
+        @click="randomize"
+        >         
+           <img v-show="hole.active" v-bind:src="hole.moleImage">
+        </div>
     </div>
-    <div class="cursor"></div>
-    <script src = "main.js"></script>
+
+</div>
 </body>
+<script src="./main.js"></script>
 </html>
+<script>
+    const mountedApp = app.mount('#app')
+</script>
